# rapl-formula

./: .flake8  Dockerfile  Dockerfile-cpython  LICENSE  README.md  contributing.md  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: lint_and_test.yml  release.yml
rapl_formula/: __init__.py  __main__.py  actor.py  context.py  dispatcher.py  rapl_formula_actor.py  rapl_handlers.py  rapl_model.py
rapl_formula/test_utils/: report.py
tests/acceptation/: test_crash_dispatcher.py  test_simple_architecture.py
tests/unit/: test_rapl_formula_actor.py
