[metadata]
name = rapl_formula
version = attr: rapl_formula.__version__
description = PowerAPI formula using RAPL counters to provides power consumption information.
long_description = file: README.md, LICENSE
long_description_content_type= text/markdown
keywords = energy, powerapi, power meter, rapl
platform = any
author = Guillaume Fieni, Arthur d'Azémar, Jordan Bouchoucha, Romain Rouvoy
author_email = powerapi-staff@inria.fr
license = BSD 3-Clause License
classifiers =
	    Programming Language :: Python :: 3.7
	    License :: OSI Approved :: BSD License

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
test_suite = tests
setup_requires =
    pytest-runner >=3.9.2
install_requires =
    powerapi == 0.6.*
tests_require =
    pytest >=3.9.2
    mock >=2.0

[options.extras_require]
mongodb =
    pymongo >=3.7.2
influxdb =
    influxdb >=5.2.2
docs =
    sphinx >=1.8.1

[aliases]
test = pytest

[bdist_wheel]
universal = true
